tests/fixtures/errors/e0505_arrow_to_wire.mimz
// expect: E0505
module M {
  clock clk
  in a: bit
  out y: bit
  wire w: bit = a
  on rise(clk) {
    w <- a
  }
  y = w
}
